tá saindo da jaula o monstro

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li><span>0</span>
           <div>
             <h3>Calculadora Mecânica</h3>
-            <h5>Pascal</h5>
+            <h5>Blaise Pascal</h5>
             <p>Seu funcionamento era baseado no uso rodas interligadas e giravam na realização dos cálculos. Ele a construiu para ajudar seu pai...</p>
             <a href="page-content/calculadora-mecanica.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
@@ -99,7 +99,7 @@
         <li><span>0</span>
           <div>
             <h3>Calculadora Mecânica Universal</h3>
-            <h5>Leibnitz</h5>
+            <h5>Gottfried Wilhelm Leibnitz</h5>
             <p>O matemático alemão, Gottfried Wilhelm von Leibnitz aprimorou a Pascaline criando um modelo capaz também de multiplicar, dividir e extrair raízes quadradas, através de adições e ...</p>
             <a href="page-content/calculadora-mecanica-universal.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
@@ -115,9 +115,9 @@
         <li class="off"><span>1</span>
           <div>
             <h3>Máquina de Tear</h3>
-            <h5>Jacquard</h5>
+            <h5>Joseph Jacquard</h5>
             <p>No ano de 1801, um costureiro chamado Joseph Marie Jacquard, desenvolveu um sistema que revolucionaria o mundo tecnológico da época, conseguiu automatizar...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/maquina-tear.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -125,7 +125,7 @@
             <h3>Máquina Diferencial</h3>
             <h5>Charles Babbage</h5>
             <p>No ano de 1822, foi publicado um artigo cientifico, que prometia revolucionar tudo que existia até então no ramo de cálculo eletrônico. O seu autor foi Charlles Babbage...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/maquina-diferencial.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -133,7 +133,7 @@
             <h3>Máquina Analítica</h3>
             <h5>Charles Babbage</h5>
             <p>Em torno de 1833, Babbage resolveu deixar de lado seus planos de uma Máquina de Diferenças. O insucesso, porém, não o impediu de desenvolver ideias para construir uma máquina ainda mais...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/maquina-analitica.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -141,7 +141,7 @@
             <h3>Aritmômetro</h3>
             <h5>Charles Xavier Thomas</h5>
             <p>Durante sua longa estada com os exércitos de Marchall Soult, onde precisava realizar uma grande quantidade de cálculos, Charles-Xavier Thomas de Colmar concebeu a ideia do aritmômetro. Considerando máquinas...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/aritmometro.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -149,15 +149,15 @@
             <h3>A Teoria de Boole</h3>
             <h5>George Boole</h5>
             <p>Por mais estranho que possa parecer, uma das maiores revoluções para o “mundo dos cálculos”, não foi nenhuma máquina milagrosa ou a evolução das já existentes – mas sim uma teoria. A publicação de dois...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/teoria-boole.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
          <li class="off"><span>1</span>
           <div>
-            <h3>Cartão Perfurado</h3>
+            <h3>Máquina do Censo</h3>
             <h5>Herman Hollerith</h5>
             <p>O conceito de cartões desenvolvido na máquina de tear programável foi muito útil para a realização do censo de 1890 nos Estados Unidos. Nessa ocasião, Herman Hollerith desenvolveu uma...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/maquina-censo.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -165,7 +165,7 @@
             <h3>Tabulating Machine Company </h3>
             <h5>Herman Hollerith</h5>
             <p>Em 1896, Hollerith criou a Tabulating Machine Company e introduziu inovações em sua descoberta. Assim, a fita de papel foi substituída por cartões, que viriam a ser o elemento...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/tabulating-machine-company.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -173,7 +173,7 @@
             <h3>International Business Corporation (IBM)</h3>
             <h5>Herman Hollerith</h5>
             <p>Tudo começou no final do século XIX, nos Estados Unidos, quando o estatístico Herman Hollerith idealizou uma solução eficiente para acelerar o colhimento e organização de dados ...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/IBM.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
@@ -238,7 +238,7 @@
             <h3>Transistores</h3>
             <h5>Shockley, Bardeen e Brattain</h5>
             <p>Entre as 10 invenções mais importantes do milênio, o transistor ocupa um lugar de destaque. Se hoje temos computadores pessoais, telefones celulares, e muitos outros equipamentos eletrônicos ...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/transistores.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li><span>0</span>
@@ -246,7 +246,7 @@
             <h3>Computador Digital Operacional</h3>
             <h5>Williams e Kilburn</h5>
             <p>Oficialmente o primeiro computador eletrônico inglês foi construído entre 1946 e 1948 na Universidade de Manchester pelo Prof. F. C. Williams e pelo Prof. Tom Kilburn...</p>
-            <a class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+            <a href="page-content/computador-digital.html" class="waves-effect waves-light btn btn-see-more">Leia mais<i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
           </div> 
         </li>
         <li class="off"><span>1</span>
