--- a/page-content/calculadora-mecanica.html
+++ b/page-content/calculadora-mecanica.html
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o ínicio</span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
         <h1>Calculadora Mecânica</h1>
-        <h3>Pacal</h3>
+        <h3>Pascal</h3>
       </div>
     </div>
   </header>
