--- a/page-content/maquina-tear.html
+++ b/page-content/maquina-tear.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Ábaco - Museu Digital da Computação</title>
+    <title>Máquina de Tear - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o </span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Ábaco</h1>
-        <h3>Povos Mesopotâmicos</h3>
+        <h1>Máquina de Tear</h1>
+        <h3>Blaise Pascal</h3>
       </div>
     </div>
   </header>
@@ -40,16 +40,12 @@
 
   <article>
     <div class="container clearfix">
-      <h1>Ábaco: a primeira calculadora da história</h1>
-        <p>Os computadores estão presentes em nosso dia a dia e já é difícil de imaginar como seria a vida sem eles. Mas você já parou para pensar como surgiram os computadores?</p>
-        <p>Para chegar aos computadores que nós conhecemos hoje, nós temos que voltar um pouco mais no tempo, aproximadamente 5.000 anos atrás. Naquela época vários eventos aconteceram que contribuíram para o avanço da ciência do cálculo. E uma delas foram os primitivos pastores, durante séculos repetindo a mesma rotina: A de soltar os seus rebanhos pela manhã para pastar em campo aberto, e de recolhê-los a tarde, quase anoitecendo.</p>
-        <p>E o tempo foi passando, estava tudo bem, até que chegou alguém no pastor e disse: <span style="text-transform: lowercase;">COMO VOCÊ SABE SE A QUANTIDADE DE OVELHA QUE SAIU, FOI A MESMA QUE VOLTOU?</span></p>
-        <p>Isso era um grande problema na época, porque as pessoas não tinham um controle em grande escala dos vários números de alimentos ou rebanhos que saíam e voltavam. Então, qual foi a solução encontrada por esse pastor? Pela manhã ele fazia um montinho de pedra e colocava uma pedra para cada ovelha que saía, e a noite ele retirava uma pedra desse monte para cada ovelha que voltava. O número de ovelhas desgarradas correspondia a quantidade de pedras sobrantes. E mesmo sem saber, esse pastor foi o primeiro humano a calcular.</p>
-        <p>Pedra em latim = calculus e, assim surgiu a palavra calcular.</p>
-        <p>Ainda assim não era suficiente, chegou uma época em que não dava para poder fazer um monte para a toda ovelha que saía ou que voltava. Necessitava então de um método mais eficiente se ter controle dessa situação, e como diz o ditado: a necessidade estimula o talento. Surge então o Ábaco.
-        </p>
-        <p style="margin-bottom: 180px;">Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões corresponde a um valor. Naquela época era muito utilizado sementes, e para realizar cálculos deslizavam sementes de um lado para o outro,
-        de maneira coesa. Pesquisadores encontraram registro dos primeiros ábacos 5.500 a.c, eles eram usados pelos povos que constituíam a mesopotâmia, e foi usado posteriormente por outras culturas como a babilônia, Egito, Grécia, Roma, índia, china, Japão e etc.</p>
+        <p style="margin-top: 62px;">No ano de 1801, um costureiro chamado Joseph Marie Jacquard, desenvolveu um sistema que revolucionaria o mundo tecnológico da época, conseguiu automatizar totalmente o tear mecânico controlado pela grande fita perfurada. A indústria Jacquard atuava no ramo de desenhos em tecidos, esta tarefa ocupava muito tempo de trabalho manual, vendo esse problema, Joseph construiu a primeira máquina realmente programável, com o objetivo de recortar tecidos de uma forma automática.</p>
+        <p>O sistema permitia que os padrões dos tecidos fossem definidos pela maneira como os fios eram levantados ou abaixados. É considerada a primeira máquina mecânica programável da história, pois os cartões forneciam os comandos necessários para a tecelagem de padrões complicados em tecidos e o conjunto de cartões poderia ser trocado sem alterar a estrutura da máquina têxtil.</p>
+        <p>O mecanismo foi chamado de TEAR PROGRAMAVEL, pois aceitava cartões como entrada em seu sistema. Dessa maneira, Jacquard desenhava a figura no cartão, inseria o cartão na máquina e a máquina reproduzia o desenho nos tecidos. 
+        A partir desse momento, o mundo tecnológico foi influenciado pelo Tear, incluindo o que vem a seguir.</p>
+        <p>Por todo o século XVIII, tecelões de seda franceses criaram métodos semelhantes para guiar os seus teares. E de cartões passaram para tambores ou fitas perfuradas. Em 7 anos já havia cerca de 11.000 teares desse tipo operando na França. Jacquard quase foi morto quando levou o tear para Lyons, pois as pessoas tinham medo que o tear provocasse a perda de seus empregos.</p>
+        <p style="margin-bottom: 180px;">Muito tempo depois, os cartões foram usados pelos primeiros computadores eletrônicos na década de 40 até o desenvolvimento de métodos de armazenamento mais confiáveis.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
