--- a/page-content/tabulating-machine-company.html
+++ b/page-content/tabulating-machine-company.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Ábaco - Museu Digital da Computação</title>
+    <title>Tabulating Machine Company - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o </span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Ábaco</h1>
-        <h3>Povos Mesopotâmicos</h3>
+        <h1>Tabulating Machine Company</h1>
+        <h3>Herman Hollerith</h3>
       </div>
     </div>
   </header>
@@ -40,16 +40,11 @@
 
   <article>
     <div class="container clearfix">
-      <h1>Ábaco: a primeira calculadora da história</h1>
-        <p>Os computadores estão presentes em nosso dia a dia e já é difícil de imaginar como seria a vida sem eles. Mas você já parou para pensar como surgiram os computadores?</p>
-        <p>Para chegar aos computadores que nós conhecemos hoje, nós temos que voltar um pouco mais no tempo, aproximadamente 5.000 anos atrás. Naquela época vários eventos aconteceram que contribuíram para o avanço da ciência do cálculo. E uma delas foram os primitivos pastores, durante séculos repetindo a mesma rotina: A de soltar os seus rebanhos pela manhã para pastar em campo aberto, e de recolhê-los a tarde, quase anoitecendo.</p>
-        <p>E o tempo foi passando, estava tudo bem, até que chegou alguém no pastor e disse: <span style="text-transform: lowercase;">COMO VOCÊ SABE SE A QUANTIDADE DE OVELHA QUE SAIU, FOI A MESMA QUE VOLTOU?</span></p>
-        <p>Isso era um grande problema na época, porque as pessoas não tinham um controle em grande escala dos vários números de alimentos ou rebanhos que saíam e voltavam. Então, qual foi a solução encontrada por esse pastor? Pela manhã ele fazia um montinho de pedra e colocava uma pedra para cada ovelha que saía, e a noite ele retirava uma pedra desse monte para cada ovelha que voltava. O número de ovelhas desgarradas correspondia a quantidade de pedras sobrantes. E mesmo sem saber, esse pastor foi o primeiro humano a calcular.</p>
-        <p>Pedra em latim = calculus e, assim surgiu a palavra calcular.</p>
-        <p>Ainda assim não era suficiente, chegou uma época em que não dava para poder fazer um monte para a toda ovelha que saía ou que voltava. Necessitava então de um método mais eficiente se ter controle dessa situação, e como diz o ditado: a necessidade estimula o talento. Surge então o Ábaco.
-        </p>
-        <p style="margin-bottom: 180px;">Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões corresponde a um valor. Naquela época era muito utilizado sementes, e para realizar cálculos deslizavam sementes de um lado para o outro,
-        de maneira coesa. Pesquisadores encontraram registro dos primeiros ábacos 5.500 a.c, eles eram usados pelos povos que constituíam a mesopotâmia, e foi usado posteriormente por outras culturas como a babilônia, Egito, Grécia, Roma, índia, china, Japão e etc.</p>
+      <p style="margin-top: 62px;">Em 1896, Hollerith criou a Tabulating Machine Company e introduziu inovações em sua descoberta. Assim, a fita de papel foi substituída por cartões, que viriam a ser o elemento básico das máquinas IBM de processamento de dados de algumas décadas atrás. Já em 1911, duas outras companhias, a International Time Recording Co., de registradores mecânicos de tempo, e a Computing Scale Co. de instrumentos de aferição de peso, uniram-se a ela, por sugestão do negociante e banqueiro Charles R. Flint, formando-se então a Computing Tabulating Recording Co. - CTR.</p>
+      <p>Três anos mais tarde, Thomas J. Watson assumiu a presidência da organização e estabeleceu normas de trabalho absolutamente inovadoras para a época.</p>
+      <p>Naquela época, a CTR contava com menos de 1400 funcionários. As constantes pesquisas de engenharia resultaram na criação e no aperfeiçoamento de novas máquinas de contabilidade, exigidas pelo rápido desenvolvimento industrial.</p>
+      <p>Antes do ano de 1924, aquele pequeno grupo de homens havia aumentado e diversificado sua experiência. Os produtos ganhavam maior qualidade, surgiam novas máquinas e com elas novos escritórios de vendas e mais vendedores.</p>
+      <p style="margin-bottom: 180px;">No ano de 1896, após algumas fusões com outras empresas e anos no empreendimento, Hollerith veio a falecer. Foi quando um substituto assumiu seu lugar em 1916, e o nome da empresa foi alterado para International Business Machines que é hoje a mundialmente conhecida IBM.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
