--- a/page-content/telegrafo.html
+++ b/page-content/telegrafo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Calculadora Mecânica Universal- Museu Digital da Computação</title>
+    <title>Telégrafo - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o ínicio</span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Calculadora Mecânica Universal</h1>
-        <h3>Leibnitz</h3>
+        <h1>Telégrafo</h1>
+        <h3>Samuel Morse</h3>
       </div>
     </div>
   </header>
@@ -55,7 +55,7 @@
         <p>Em 1843 o Congresso dos Estados Unidos destinou US $ 10.000 para Samuel Morse, afim de estabelecer uma linha telegráfica entre Washington, DC e Baltimore, cidades separadas por 57 km de distância.</p>
         <p>Em 24 de maio de 1844 aconteceu a primeira demonstração pública do telégrafo por Morse que, instalado no High Court of Justice em Washington, enviou uma mensagem telegráfica para a estação de trens, em Baltimore.</p>
         <p>Lá, entre as várias pessoas que esperavam a transmissão. Alfred L. Vail, colaborador de Morse, recebeu a mensagem e retransmitiu-a de imediato. O texto desta primeira mensagem era uma citação da Bíblia:</p>
-        <p>“WHAT HATH GOD WROUGHT” (= “Que coisas Deus criou!!”).</p>
+        <p>“What hath God wrought!!” (= “Que coisas Deus criou!!”).</p>
         <p>Morse envolveu-se em grandes litígios para obter os direitos sobre seu sistema que só foram reconhecidos em 1854 pela Corte Suprema dos EUA. O código Morse sonoro foi usado até 1917.</p>
         <p>Em 1851 um cabo submarino ligou a Grã-Bretanha ao continente Europeu, para permitir telegrafia. Ligava Dover, cidade no sudeste da Inglaterra, ao continente europeu.</p>
         <p>Entre 1856 e 1858 tentou-se ligar as duas costas do Oceano Atlântico (Nova Inglaterra - Grã-Bretanha) por um cabo submarino metálico. O cabo transatlântico primeiramente foi rompido. Depois permaneceu incólume mas falhou por problemas de voltagem. Além disso, o sistema era lento com uma largura de banda capaz de transportar apenas duas palavras por minuto.</p>
