--- a/page-content/teoria-boole.html
+++ b/page-content/teoria-boole.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Ábaco - Museu Digital da Computação</title>
+    <title>A Teoria de Boole - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o </span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Ábaco</h1>
-        <h3>Povos Mesopotâmicos</h3>
+        <h1>A Teoria de Boole</h1>
+        <h3>George Boole</h3>
       </div>
     </div>
   </header>
@@ -40,16 +40,15 @@
 
   <article>
     <div class="container clearfix">
-      <h1>Ábaco: a primeira calculadora da história</h1>
-        <p>Os computadores estão presentes em nosso dia a dia e já é difícil de imaginar como seria a vida sem eles. Mas você já parou para pensar como surgiram os computadores?</p>
-        <p>Para chegar aos computadores que nós conhecemos hoje, nós temos que voltar um pouco mais no tempo, aproximadamente 5.000 anos atrás. Naquela época vários eventos aconteceram que contribuíram para o avanço da ciência do cálculo. E uma delas foram os primitivos pastores, durante séculos repetindo a mesma rotina: A de soltar os seus rebanhos pela manhã para pastar em campo aberto, e de recolhê-los a tarde, quase anoitecendo.</p>
-        <p>E o tempo foi passando, estava tudo bem, até que chegou alguém no pastor e disse: <span style="text-transform: lowercase;">COMO VOCÊ SABE SE A QUANTIDADE DE OVELHA QUE SAIU, FOI A MESMA QUE VOLTOU?</span></p>
-        <p>Isso era um grande problema na época, porque as pessoas não tinham um controle em grande escala dos vários números de alimentos ou rebanhos que saíam e voltavam. Então, qual foi a solução encontrada por esse pastor? Pela manhã ele fazia um montinho de pedra e colocava uma pedra para cada ovelha que saía, e a noite ele retirava uma pedra desse monte para cada ovelha que voltava. O número de ovelhas desgarradas correspondia a quantidade de pedras sobrantes. E mesmo sem saber, esse pastor foi o primeiro humano a calcular.</p>
-        <p>Pedra em latim = calculus e, assim surgiu a palavra calcular.</p>
-        <p>Ainda assim não era suficiente, chegou uma época em que não dava para poder fazer um monte para a toda ovelha que saía ou que voltava. Necessitava então de um método mais eficiente se ter controle dessa situação, e como diz o ditado: a necessidade estimula o talento. Surge então o Ábaco.
-        </p>
-        <p style="margin-bottom: 180px;">Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões corresponde a um valor. Naquela época era muito utilizado sementes, e para realizar cálculos deslizavam sementes de um lado para o outro,
-        de maneira coesa. Pesquisadores encontraram registro dos primeiros ábacos 5.500 a.c, eles eram usados pelos povos que constituíam a mesopotâmia, e foi usado posteriormente por outras culturas como a babilônia, Egito, Grécia, Roma, índia, china, Japão e etc.</p>
+        <p style="margin-top: 62px;">Se Babbage é o avô do computador do ponto de vista de arquitetura de hardware, o matemático George Boole pode ser considerado o pai da lógica moderna. Boole desenvolveu, em 1847, um sistema lógico que reduzia a representação de valores através de dois algarismos: 0 ou 1.</p>
+        <p>Por mais estranho que possa parecer, uma das maiores revoluções para o “mundo dos cálculos”, não foi nenhuma máquina milagrosa ou a evolução das já existentes – mas sim uma teoria. A publicação de dois livros, A Análise Matemática da Lógica e Uma Investigação das Leis do Pensamento, em 1847 e 1854 respectivamente, deram a George Boole o título de inventor da lógica matemática. Os dois livros formam a base da atual Ciência da Computação e da Cibernética. O que Boole propôs era que qualquer coisa (sejam números, letras ou mesmo objetos) poderia ser representado por símbolos e regras.</p>
+        <p>O matemático se chamava George Boole, ele desenvolveu um sistema logico que reduzia a representação de valores através de dois logaritmos: 0 ou 1, ou seja, Boole criou a combinação binaria, que é hoje a linguagem da computação moderna. Em sua teoria, o número 1 tem significado como: ATIVO, LIGADO, EXISTENTE, VERDADEIRO; por outro lado, 0 representa o inverso: NÃO ATIVO, DESLIGADO, INESXISTENTE, FALSO.</p>
+        <p>Para representar valores intermediários, como “mais ou menos” ativo, é possível usar dois ou mais algarismos (bits) para a representação. Por exemplo:<br>
+        <br>▪ 00 – Desligado
+        <br>▪ 01 – Carga baixa
+        <br>▪ 10 – Carga moderada
+        <br>▪ 11 – Carga alta</p>
+        <p style="margin-bottom: 180px;">Todo o sistema logico dos computadores atuais, inclusive o qual você está usando agora, usa a teoria de Boole.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
