--- a/page-content/transistores.html
+++ b/page-content/transistores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Ábaco - Museu Digital da Computação</title>
+    <title>Transistores - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o </span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Ábaco</h1>
-        <h3>Povos Mesopotâmicos</h3>
+        <h1>Transistores</h1>
+        <h3>Shockley, Bardeen e Brattain</h3>
       </div>
     </div>
   </header>
@@ -40,16 +40,11 @@
 
   <article>
     <div class="container clearfix">
-      <h1>Ábaco: a primeira calculadora da história</h1>
-        <p>Os computadores estão presentes em nosso dia a dia e já é difícil de imaginar como seria a vida sem eles. Mas você já parou para pensar como surgiram os computadores?</p>
-        <p>Para chegar aos computadores que nós conhecemos hoje, nós temos que voltar um pouco mais no tempo, aproximadamente 5.000 anos atrás. Naquela época vários eventos aconteceram que contribuíram para o avanço da ciência do cálculo. E uma delas foram os primitivos pastores, durante séculos repetindo a mesma rotina: A de soltar os seus rebanhos pela manhã para pastar em campo aberto, e de recolhê-los a tarde, quase anoitecendo.</p>
-        <p>E o tempo foi passando, estava tudo bem, até que chegou alguém no pastor e disse: <span style="text-transform: lowercase;">COMO VOCÊ SABE SE A QUANTIDADE DE OVELHA QUE SAIU, FOI A MESMA QUE VOLTOU?</span></p>
-        <p>Isso era um grande problema na época, porque as pessoas não tinham um controle em grande escala dos vários números de alimentos ou rebanhos que saíam e voltavam. Então, qual foi a solução encontrada por esse pastor? Pela manhã ele fazia um montinho de pedra e colocava uma pedra para cada ovelha que saía, e a noite ele retirava uma pedra desse monte para cada ovelha que voltava. O número de ovelhas desgarradas correspondia a quantidade de pedras sobrantes. E mesmo sem saber, esse pastor foi o primeiro humano a calcular.</p>
-        <p>Pedra em latim = calculus e, assim surgiu a palavra calcular.</p>
-        <p>Ainda assim não era suficiente, chegou uma época em que não dava para poder fazer um monte para a toda ovelha que saía ou que voltava. Necessitava então de um método mais eficiente se ter controle dessa situação, e como diz o ditado: a necessidade estimula o talento. Surge então o Ábaco.
-        </p>
-        <p style="margin-bottom: 180px;">Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões corresponde a um valor. Naquela época era muito utilizado sementes, e para realizar cálculos deslizavam sementes de um lado para o outro,
-        de maneira coesa. Pesquisadores encontraram registro dos primeiros ábacos 5.500 a.c, eles eram usados pelos povos que constituíam a mesopotâmia, e foi usado posteriormente por outras culturas como a babilônia, Egito, Grécia, Roma, índia, china, Japão e etc.</p>
+        <p style="margin-top: 62px;">Entre as 10 invenções mais importantes do milênio, o transistor ocupa um lugar de destaque. Se hoje temos computadores pessoais, telefones celulares, e muitos outros equipamentos eletrônicos compactos e baratos é graças a invenção deste componente. No entanto, poucos conhecem sua história real e quem trabalha com eletrônica não pode deixar de saber como surgiu o mais importante de todos os componentes eletrônicos.</p>
+        <p>Os diodos semicondutores (de estado sólido) como, por exemplo, os retificadores de óxido de cobre já eram conhecidos antes mesmo de 1920.</p>
+        <p>Com a invenção da válvula triodo, a partir da válvula diodo, muitos pesquisadores passaram a trabalhar com a possibilidade de se controlar a corrente num retificador de estado sólido (um diodo semicondutor), a partir de algum eletrodo colocado na sua estrutura. Isso permitiria elaborar um dispositivo de estado sólido capaz de amplificar correntes da mesma forma que faz a válvula triodo. No entanto, apesar de haver uma certa validade na idéia, nenhum dos pesquisadores teve sucesso justamente porque os materiais 
+        usados na fabricação dos diodos semicondutores não eram apropriados. Foi somente depois da segunda guerra mundial  que o germânio e o silício passaram a ser usados em diodos detectores de micro-ondas para radares e que se desenvolveu uma teoria completa que permitia entender os estados quânticos dos portadores de carga nestes materiais.</p>
+        <p style="margin-bottom: 180px;">A ideia inicial de pascal era desenvolver uma máquina que realizasse as quatros equações matemáticas básicas, o que não aconteceu na prática, pois ela era apenas capaz de somar e subtrair. Por esse motivo, a tecnologia não foi muito bem aceita época, mas alguns anos após a máquina de pascal, em 1672, o Alemão Gottfried Wilhelm Leibniz conseguiu o que pascal não tinha conseguido. Gottfried criou uma calculadora que efetuava soma a divisão e também a raiz quadrada. Em todas as maquinas e mecanismos existentes até o momento tinham suas programações pré-definidas e não era possível inserir novas funções.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
