--- a/page-content/maquina-analitica.html
+++ b/page-content/maquina-analitica.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Calculadora Mecânica Universal - Museu Digital da Computação</title>
+    <title>Máquina Analítica - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -31,8 +31,8 @@
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Calculadora Mecânica Universal</h1>
-        <h3>Leibnitz</h3>
+        <h1>Máquina Analítica</h1>
+        <h3>Charles Babbage</h3>
       </div>
     </div>
   </header>
@@ -40,10 +40,13 @@
 
   <article>
     <div class="container clearfix">
-        <p style="margin-top: 62px;">O matemático alemão, Gottfried Wilhelm von Leibnitz aprimorou a Pascaline criando um modelo capaz também de multiplicar, dividir e extrair raízes quadradas, através de adições e subtrações sucessivas, obtendo a Calculadora Universal de Leibnitz, também conhecida como Máquina de Leibnitz.</p>
-        <p>Em 1673, ficou pronta a calculadora mecânica, que se distinguia por possuir três elementos significativos. A porção aditiva era, essencialmente, idêntica à da Pascaline, mas Leibniz incluiu um componente móvel e uma manivela manual, que ficava ao lado e acionava uma roda dentada - ou, nas versões posteriores, cilindros - dentro da máquina. Este mecanismo funcionava, com o componente móvel, para acelerar as adições repetidas envolvidas nas operações de multiplicação e divisão.</p>
-        <p>A própria repetição tornava-se automatizada. Desta forma a máquina era capaz de fazer conversão entre as várias moedas europeias da época, Pode-se mesmo dizer que talvez tenha sido essa a principal motivação de Leibnitz em construir esta máquina pois seu pai era contador. Na época as subdivisões das moedas não seguiam a base decimal e os cálculos de conversão eram árduos. Não causa admiração saber que a mãe de Leibnitz foi acusada de manter relações sexuais com o Diabo e presa pela Santa Inquisição, só tendo escapado devido a que seu marido, pai de Leibnitz era muito influente e respeitado.</p>
-        <p style="margin-bottom: 180px;">Em 1671, o matemático e filósofo alemão Gottfried Leibniz aperfeiçoou a calculadora de Pascal: além de somar e subtrair, a nova máquina multiplicava e dividia. A calculadora “de bolso”, com circuitos transistorizados, pesando 1 quilo e custando US$ 150, apareceu só em 1970 nos Estados Unidos. Em pouco tempo, sua disseminação fez o preço e o peso despencarem. Hoje é possível comprar uma calculadora por menos de R$ 5,00 pesando apenas 60 gramas (com a pilha).</p>
+        <p style="margin-top: 62px;">Em torno de 1833, Babbage resolveu deixar de lado seus planos de uma Máquina de Diferenças. O insucesso, porém, não o impediu de desenvolver ideias para construir uma máquina ainda mais ambiciosa. Concebeu depois a ideia de uma máquina que não realizasse apenas uma específica tarefa matemática, mas qualquer tipo de cálculo. Esta chamar-se-ia Engenho Analítico – um manipulador generalista de símbolos, que continha algumas das características-chave dos computadores de hoje.</p>
+        <p>Ela aproveitava todos os conceitos do tear programável, como por exemplo, o uso dos cartões. Além disso instruções e comandos também poderiam ser informados pelos cartões, criando os registradores primitivos.</p>
+        <p>A Máquina Analítica deveria possuir uma seção denominada "moinho" e um outro denominado “depósito”, ambas compostas de rodas dentadas. O depósito poderia reter até cem números de quarenta dígitos de uma só vez. As instruções seriam introduzidas na Máquina por meio de cartões perfurados. "Podemos dizer mais convenientemente que a Máquina Analítica tece padrões algébricos, assim como o tear de Jacquard tece flores e folhas", escreveu a condessa de Lovelace.</p>
+        <p>Mais uma vez sua máquina não pôde ser implementada na época pelo mesmo motivo de limitações técnicas e financeiras. A Máquina Analítica nunca foi construída. Tudo o que existe dela são resmas de planos e desenhos, e parte do "moinho" e da impressora, que o filho de Babbage construiu.</p>
+        <p>Ironicamente, a Máquina de Diferenças teve um destino um pouco melhor. Embora o próprio Babbage nunca mais voltasse a ela, um impressor, inventor e tradutor sueco chamado Pehr Georg Scheutz leu a respeito do dispositivo e construiu uma versão modificada, em 1854.</p>
+        <p>A tecnologia existente não era avançada o suficiente para execução do projeto, mas a contribuição teórica de Babbage foi tão grande que muitas de suas ideias são usadas até hoje. Babbage é considerado o avô do computador, no ponto de vista da arquitetura de hardware.</p>
+        <p style="margin-bottom: 180px;">Infelizmente pouco resta destes protótipos de Babbage. A exatidão que as suas máquinas requeriam, excedia largamente o nível de tecnologia existente na altura. Iria demorar mais de 50 anos e uma dissecação ao seu cérebro de pensador profundo para que as suas ideias se transformassem em algo que não fosse ficção cientifica. Só existem fragmentos do protótipo do Engenho Diferencial, e, apesar de ter dedicado muito tempo e a sua fortuna após 1856 à construção do Engenho Analítico, não logrou completar nenhum dos projetos.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
