--- a/page-content/maquina-diferencial.html
+++ b/page-content/maquina-diferencial.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="keywords" content="museu, digital, computação, tecnologia, história, gerações, invenções, museum, digital, computer, technology, history, generations, inventions" />
     <meta name="author" content="1º Período Sistemas de Informação - ITPAC Araguaína" />
-    <title>Ábaco - Museu Digital da Computação</title>
+    <title>Máquina Difirencial - Museu Digital da Computação</title>
     <!-- Favicons -->
     <link rel="icon" href="images/favicon/favicon-32x32.png" sizes="32x32">
     <!-- Fonts -->
@@ -27,12 +27,12 @@
       <div class="back">
         <a href="javascript:window.history.go(-1)">
           <i class="material-icons">keyboard_return</i>
-          <span>Voltar para o </span>
+          <span>Voltar para o ínício</span>
         </a>
       </div>
       <div class="container clearfix">
-        <h1>Ábaco</h1>
-        <h3>Povos Mesopotâmicos</h3>
+        <h1>Máquina Difirencial</h1>
+        <h3>Charles Babbage</h3>
       </div>
     </div>
   </header>
@@ -40,16 +40,10 @@
 
   <article>
     <div class="container clearfix">
-      <h1>Ábaco: a primeira calculadora da história</h1>
-        <p>Os computadores estão presentes em nosso dia a dia e já é difícil de imaginar como seria a vida sem eles. Mas você já parou para pensar como surgiram os computadores?</p>
-        <p>Para chegar aos computadores que nós conhecemos hoje, nós temos que voltar um pouco mais no tempo, aproximadamente 5.000 anos atrás. Naquela época vários eventos aconteceram que contribuíram para o avanço da ciência do cálculo. E uma delas foram os primitivos pastores, durante séculos repetindo a mesma rotina: A de soltar os seus rebanhos pela manhã para pastar em campo aberto, e de recolhê-los a tarde, quase anoitecendo.</p>
-        <p>E o tempo foi passando, estava tudo bem, até que chegou alguém no pastor e disse: <span style="text-transform: lowercase;">COMO VOCÊ SABE SE A QUANTIDADE DE OVELHA QUE SAIU, FOI A MESMA QUE VOLTOU?</span></p>
-        <p>Isso era um grande problema na época, porque as pessoas não tinham um controle em grande escala dos vários números de alimentos ou rebanhos que saíam e voltavam. Então, qual foi a solução encontrada por esse pastor? Pela manhã ele fazia um montinho de pedra e colocava uma pedra para cada ovelha que saía, e a noite ele retirava uma pedra desse monte para cada ovelha que voltava. O número de ovelhas desgarradas correspondia a quantidade de pedras sobrantes. E mesmo sem saber, esse pastor foi o primeiro humano a calcular.</p>
-        <p>Pedra em latim = calculus e, assim surgiu a palavra calcular.</p>
-        <p>Ainda assim não era suficiente, chegou uma época em que não dava para poder fazer um monte para a toda ovelha que saía ou que voltava. Necessitava então de um método mais eficiente se ter controle dessa situação, e como diz o ditado: a necessidade estimula o talento. Surge então o Ábaco.
-        </p>
-        <p style="margin-bottom: 180px;">Mas, o que é esse Ábaco? Ele é formado por uma moldura com bastões ou arames paralelos dispostos no sentido vertical, onde cada posição desses bastões corresponde a um valor. Naquela época era muito utilizado sementes, e para realizar cálculos deslizavam sementes de um lado para o outro,
-        de maneira coesa. Pesquisadores encontraram registro dos primeiros ábacos 5.500 a.c, eles eram usados pelos povos que constituíam a mesopotâmia, e foi usado posteriormente por outras culturas como a babilônia, Egito, Grécia, Roma, índia, china, Japão e etc.</p>
+        <p style="margin-top: 62px;">No ano de 1822, foi publicado um artigo cientifico, que prometia revolucionar tudo que existia até então no ramo de cálculo eletrônico. O seu autor foi Charlles Babbage, o mesmo afirmou que sua máquina era capaz de calcular funções da trigonometria e dos logaritmos, que poderia computar e imprimir extensas tabelas científicas, e de uma forma muito simples. Esse projeto foi chamado de máquina de diferenças, por causa disso, houve um BOOM na época, pois as ideias aplicadas no projeto estavam muito à frente do seu tempo, mas devido às limitações técnicas e financeiras, a máquina de diferença só pôde ser implementada há muitos anos depois da publicação.</p>
+        <p>Em 1821 inventou a Máquina Diferencial para compilação de tabelas matemáticas.</p>
+        <p>Ele convenceu a Royal Society - prestigiosa associação científica - a apoiar uma proposta dirigida ao governo para que este subvencionasse a construção de um modelo em tamanho grande. A Sociedade julgou seu trabalho "altamente merecedor de encorajamento pública". Um ano mais tarde, o governo britânico concedeu-lhe 1.500 libras para a realização do projeto. Durante os dez anos seguintes, Babbage sustentou uma verdadeira luta com seu embrião de computador. Esperava, originalmente, terminá-lo em três anos, mas a Máquina de Diferenças ficava cada vez mais complexa à medida que a modificava, aperfeiçoava e redesenhava.</p>
+        <p style="margin-bottom: 180px;">Apesar do trabalho de Babbage ser formalmente reconhecido por respeitáveis instituições científicas, o governo britânico suspendeu os fundos para o seu Engenho Diferencial em 1832 e abortou o projeto dez anos depois.</p>
     </div>
   </article>
   <a href="#" class="scrollTop"><i class="material-icons">keyboard_arrow_up</i></a>
